--- a/chatcrawler.ipynb
+++ b/chatcrawler.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,21 +298,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The generative Artificial Intelligence market generated revenues of roughly $86.9 billion in 2022.\n",
+      "https://ai.gov.ae/wp-content/uploads/2023/04/406.-Generative-AI-Guide_ver1-EN.pdf\n"
+     ]
+    }
+   ],
    "source": [
-    "answer, urls =  answer_question(df, question=\"who acquired Aligorithmics\", debug=False)"
+    "answer, urls =  answer_question(df, question=\"How much did the artificial intellegance market generate in 2022\", debug=False)\n",
+    "# answer, urls =  answer_question(df, question=\"who made you\", debug=False)\n",
+    "\n",
+    "print(answer)\n",
+    "print(urls[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It is not possible to answer this question based on the context provided.\n",
+      "https://ai.gov.ae/wp-content/uploads/2023/04/406.-Generative-AI-Guide_ver1-EN.pdf\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
+    "answer, urls =  answer_question(df, question=\"How many of the 100 usecases are examples of chatgpt usage\", debug=False)\n",
+    "# answer, urls =  answer_question(df, question=\"who made you\", debug=False)\n",
+    "\n",
     "print(answer)\n",
-    "print(urls[0])\n"
+    "print(urls[0])"
    ]
   }
  ],
