--- a/main.ipynb
+++ b/main.ipynb
@@ -52,15 +52,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I couldn't find the answer.\n",
-      "['https://ai.gov.ae/wp-content/uploads/2023/03/AI-Report-AR-V7.pdf', 'https://ai.gov.ae/wp-content/uploads/2020/01/Blockchain_AR_v1-online.pdf', 'https://ai.gov.ae/news-2022']\n"
+      "The generative Artificial Intelligence market generated revenues of roughly $86.9 billion in 2022.\n",
+      "['https://ai.gov.ae/wp-content/uploads/2023/04/406.-Generative-AI-Guide_ver1-EN.pdf', 'https://ai.gov.ae/wp-content/uploads/2021/07/UAE-National-Strategy-for-Artificial-Intelligence-2031.pdf', 'https://ai.gov.ae/strategy/#objective2']\n"
      ]
     }
    ],
@@ -69,7 +69,7 @@
     "\n",
     "gbot_ai = GBot.from_embedding('processed/embeddings_ai.gov.ae.csv')\n",
     "\n",
-    "answer, urls = gbot_ai.answer('how much did Federal General Budget approve', True)\n",
+    "answer, urls = gbot_ai.answer('how much did the artificial intelligence market generate in revenues in 2022')\n",
     "print(answer)\n",
     "print(urls)"
    ]
