--- a/main.ipynb
+++ b/main.ipynb
@@ -20,10 +20,7 @@
    "source": [
     "from gbot.gbot import GBot\n",
     "gbot = GBot('https://moe.gov.ae')\n",
-    "gbot.process_folder('text/moe.gov.ae/')\n",
-    "gbot.shorten()\n",
-    "# expensive function\n",
-    "gbot.embed()"
+    "gbot.to_embedding('text/moe.gov.ae/')\n"
    ]
   },
   {
