--- a/main.ipynb
+++ b/main.ipynb
@@ -2,25 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HTTP Error 403: Forbidden\n",
+      "HTTP Error 404: Not Found\n",
+      "HTTP Error 404: Not Found\n",
+      "HTTP Error 404: Not Found\n",
+      "URL can't contain control characters. '/ https://aurak.ac.ae/en/academics/school-of-engineering/academic-programs/bs-computer-science' (found at least ' ')\n",
+      "URL can't contain control characters. '/ https://engineering.aau.ac.ae/en/programs/bachelor-of-science-in-computer-science' (found at least ' ')\n",
+      "URL can't contain control characters. '/ https://mbzuai.ac.ae/study/academic-programs/msc/computer-vision' (found at least ' ')\n",
+      "HTTP Error 403: Forbidden\n",
+      "HTTP Error 404: Not Found\n",
+      "HTTP Error 404: Not Found\n",
+      "HTTP Error 404: Not Found\n",
+      "HTTP Error 404: Not Found\n"
+     ]
+    }
+   ],
    "source": [
     "from gbot.gbot import GBot\n",
     "\n",
-    "gbot = GBot('https://moe.gov.ae')\n",
+    "gbot = GBot('https://ai.gov.ae')\n",
     "gbot.crawl()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rashed/dev/aio/chatbot/chat-crawler/gbot/utils/utils.py:46: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "  serie = serie.str.replace(\"\\\\n\", \" \")\n"
+     ]
+    }
+   ],
    "source": [
     "from gbot.gbot import GBot\n",
-    "gbot = GBot('https://moe.gov.ae')\n",
-    "gbot.to_embedding('text/moe.gov.ae/')\n"
+    "domain = 'ai.gov.ae'\n",
+    "gbot = GBot(f'https://{domain}')\n",
+    "gbot.to_embedding(f'text/{domain}/')\n"
    ]
   },
   {
@@ -43,6 +72,30 @@
     "gbot = GBot.from_embedding('processed/embeddings_moe.gov.ae.csv')\n",
     "\n",
     "answer, urls = gbot.answer('what is the training programs pillars')\n",
+    "print(answer)\n",
+    "print(urls)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The generative Artificial Intelligence market generated revenues of roughly $86.9 billion in 2022.\n",
+      "['https://ai.gov.ae/wp-content/uploads/2023/04/406.-Generative-AI-Guide_ver1-EN.pdf', 'https://ai.gov.ae/wp-content/uploads/2021/07/UAE-National-Strategy-for-Artificial-Intelligence-2031.pdf', 'https://ai.gov.ae/strategy/#objective6']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from gbot.gbot import GBot\n",
+    "domain = 'ai.gov.ae'\n",
+    "gbot = GBot.from_embedding(f'processed/embeddings_{domain}.csv')\n",
+    "\n",
+    "answer, urls = gbot.answer('how much did the artificial intelligence market generate in revenues in 2022')\n",
     "print(answer)\n",
     "print(urls)"
    ]
