--- a/main.ipynb
+++ b/main.ipynb
@@ -2,54 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HTTP Error 403: Forbidden\n",
-      "HTTP Error 404: Not Found\n",
-      "HTTP Error 404: Not Found\n",
-      "HTTP Error 404: Not Found\n",
-      "URL can't contain control characters. '/ https://aurak.ac.ae/en/academics/school-of-engineering/academic-programs/bs-computer-science' (found at least ' ')\n",
-      "URL can't contain control characters. '/ https://engineering.aau.ac.ae/en/programs/bachelor-of-science-in-computer-science' (found at least ' ')\n",
-      "URL can't contain control characters. '/ https://mbzuai.ac.ae/study/academic-programs/msc/computer-vision' (found at least ' ')\n",
-      "HTTP Error 403: Forbidden\n",
-      "HTTP Error 404: Not Found\n",
-      "HTTP Error 404: Not Found\n",
-      "HTTP Error 404: Not Found\n",
-      "HTTP Error 404: Not Found\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from gbot.gbot import GBot\n",
     "\n",
-    "gbot = GBot('https://ai.gov.ae')\n",
-    "gbot.crawl()\n"
+    "gbot = GBot('https://mof.gov.ae')\n",
+    "# crawls over every link and pdf\n",
+    "# saves the output into text/{domain}\n",
+    "gbot.crawl()\n",
+    "\n",
+    "# 18 minutes to scan all of mof site"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/rashed/dev/aio/chatbot/chat-crawler/gbot/utils/utils.py:46: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  serie = serie.str.replace(\"\\\\n\", \" \")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Use openai embeddings to convert text into embeddings\n",
+    "# the embeddings file will be saved to processed/embeddings_{domain}.csv\n",
+    "\n",
     "from gbot.gbot import GBot\n",
-    "domain = 'ai.gov.ae'\n",
+    "domain = 'mof.gov.ae'\n",
     "gbot = GBot(f'https://{domain}')\n",
-    "gbot.to_embedding(f'text/{domain}/')\n"
+    "gbot.to_embedding(f'text/{domain}/')\n",
+    "\n",
+    "# 8 minutes to convert text into embeddings"
    ]
   },
   {
@@ -62,66 +43,89 @@
      "output_type": "stream",
      "text": [
       "The pillars of the training programs include programs of technical and academic excellence, developing personal and professional skills, providing assessments and tests, and developing student capabilities and performance.\n",
-      "['https://moe.gov.ae/En/Legislation/Documents/50-2021.pdf', 'https://moe.gov.ae/Ar/ImportantLinks/SiteAssets/OEHSMS.pdf', 'https://moe.gov.ae/Ar/ImportantLinks/Assessment/Documents/Curriculum-docs/الإطار%20العام%20لمعايير%20المناهج%202017%20الفنون%20البصرية.pdf']\n"
+      "https://moe.gov.ae/En/Legislation/Documents/50-2021.pdf\n"
      ]
     }
    ],
    "source": [
+    "# Use embeddings to answer questions\n",
+    "# give links that are closest to the answer\n",
+    "\n",
     "from gbot.gbot import GBot\n",
     "\n",
     "gbot = GBot.from_embedding('processed/embeddings_moe.gov.ae.csv')\n",
     "\n",
     "answer, urls = gbot.answer('what is the training programs pillars')\n",
     "print(answer)\n",
-    "print(urls)"
+    "print(urls[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The generative Artificial Intelligence market generated revenues of roughly $86.9 billion in 2022.\n",
-      "['https://ai.gov.ae/wp-content/uploads/2023/04/406.-Generative-AI-Guide_ver1-EN.pdf', 'https://ai.gov.ae/wp-content/uploads/2021/07/UAE-National-Strategy-for-Artificial-Intelligence-2031.pdf', 'https://ai.gov.ae/strategy/#objective6']\n"
+      "دليل الإجراءات هو وثيقة قابلة للتغيير والتطوير ينبغي مراجعتها بشكل دوري من أجل ضمان توافقها مع أهداف الحكومة الإتحادية، وقد صممت الإجراءات الموض\n",
+      "https://mof.gov.ae/wp-content/uploads/2023/04/دليل-اجراءات-المشتريات-الرقمية-للحكومة-الإتحادية-2023.pdf\n"
      ]
     }
    ],
    "source": [
-    "from gbot.gbot import GBot\n",
-    "domain = 'ai.gov.ae'\n",
-    "gbot = GBot.from_embedding(f'processed/embeddings_{domain}.csv')\n",
+    "# example answer from a PDF in arabic\n",
     "\n",
-    "answer, urls = gbot.answer('how much did the artificial intelligence market generate in revenues in 2022')\n",
+    "gbot = GBot.from_embedding('processed/embeddings_mof.gov.ae.csv')\n",
+    "\n",
+    "answer, urls = gbot.answer(' ما هو دليل الإجراءات ')\n",
     "print(answer)\n",
-    "print(urls)"
+    "print(urls[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The generative Artificial Intelligence market generated revenues of roughly $86.9 billion in 2022.\n",
-      "['https://ai.gov.ae/wp-content/uploads/2023/04/406.-Generative-AI-Guide_ver1-EN.pdf', 'https://ai.gov.ae/wp-content/uploads/2021/07/UAE-National-Strategy-for-Artificial-Intelligence-2031.pdf', 'https://ai.gov.ae/strategy/#objective2']\n"
+      "The customer can access the service through the Ministry of Finance portal https://www.mof.gov.ae, by selecting the Government electronic services option as shown below. After selecting the service customer can view the service card as shown below. After successfully landing to service, the customer will reach the start page as shown in the image below.\n",
+      "https://mof.gov.ae/wp-content/uploads/2022/08/70-modify-reports-on-tableau-data-lake-page-eng.pdf\n"
      ]
     }
    ],
    "source": [
-    "from gbot.gbot import GBot\n",
+    "# example answer in english from PDF\n",
     "\n",
-    "gbot_ai = GBot.from_embedding('processed/embeddings_ai.gov.ae.csv')\n",
-    "\n",
-    "answer, urls = gbot_ai.answer('how much did the artificial intelligence market generate in revenues in 2022')\n",
+    "answer, urls = gbot.answer('how to Applying to create reports in the smart reporting')\n",
     "print(answer)\n",
-    "print(urls)"
+    "print(urls[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "تكون لجنة المشتريات مسؤولة عن تشكيل اللجنة وتنسيق اجتماعاتها، ودعوة األعضاء لحضور املناقشات وتدوين محاضر املناقشات وتوثيقها، وتحديد موعد إتال\n",
+      "https://mof.gov.ae/wp-content/uploads/2023/04/دليل-اجراءات-المشتريات-الرقمية-للحكومة-الإتحادية-2023.pdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "# arabic answers not as good by default \n",
+    "\n",
+    "answer, urls = gbot.answer('ما هو المسؤوليات لأعضاء لجنة المشتريات ')\n",
+    "print(answer)\n",
+    "print(urls[0])"
    ]
   }
  ],
@@ -141,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
